--- a/ros/src/pentapod_server/config/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/base_local_planner_params.yaml
@@ -4,7 +4,7 @@ TrajectoryPlannerROS:
   
   # robot speed and acceleration limits
   min_in_place_vel_theta: 0.0
-  y_vels: [-0.1, -0.01, 0.01, 0.1 ]
+  y_vels: [-0.1, -0.09, -0.08,-0.07,-0.06,-0.05,-0.04,-0.03,-0.02,-0.01, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ]
 
   max_vel_theta: 0.3
   min_vel_theta: -0.3
@@ -13,7 +13,7 @@ TrajectoryPlannerROS:
   min_vel_x: -0.100
   max_vel_y: 0.100      # max strafing speed
   min_vel_y: -0.100     # 
-  acc_lim_theta: 0.05
+  acc_lim_theta: 0.1
   acc_lim_x: 0.05
   acc_lim_y: 0.05
   
