--- a/ros/src/pentapod_server/config/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/teb_local_planner_params.yaml
@@ -52,4 +52,4 @@ weight_kinematics_turning_radius: 0.0       # do not try to optimize the turning
 weight_inflation: 0.8                       # weight how much the inflation_dist is considered (pretty much to avoid lurking too close too walls)
 
 # Homotopy Class Planner
-enable_homotopy_class_planning: True # would induce explosive cpu load 
+enable_homotopy_class_planning: False # would induce explosive cpu load 
